# ai-coding-tool-scanner

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  test_scanner.py
src/: __init__.py  scanner.py
tests/: test_cli.py  test_scanner.py
