[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-coding-tool-scanner"
version = "1.0.0"
description = "Detect prompt injection vulnerabilities in AI coding tool contexts"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Cybathreat", email = "ahmed.chiboub@cybacrest.com"}]
keywords = ["ai", "security", "prompt-injection", "llm", "scanner", "cybersecurity"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[project.scripts]
ai-coding-tool-scanner = "src.scanner:main"

[project.urls]
Homepage = "https://github.com/cybathreat/ai-coding-tool-scanner"
Documentation = "https://github.com/cybathreat/ai-coding-tool-scanner/blob/main/README.md"
Repository = "https://github.com/cybathreat/ai-coding-tool-scanner"
Issues = "https://github.com/cybathreat/ai-coding-tool-scanner/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
